1/1.12/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project06-svc
spec:
  selector:
    app: project06
  ports:
  - port: 2345
    targetPort: 3001
